--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,6 @@ version: '3.8'
 services: 
     portfolio:
         container_name: 'Portfolio'
-        image: 'test-portfolio'
+        image: 'ghcr.io/julianjesacher/portfolio/portfolio:latest'
         ports: 
             - 127.0.0.1:1000:80
