--- a/projects.json
+++ b/projects.json
@@ -1,9 +1,9 @@
 [
     {
-        "title": "Great Project 1",
-        "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. ",
-        "demo-link": "a",
-        "github-link": "a",
+        "title": "FoodBook",
+        "description": "FoodBook is a social network for sharing recipes. Its content is protected via JWT authentication and served via an Express.js REST API. The user can create, update and delete recipes using dynamic forms, which are implemented with Angular's Reactive Forms API. At the core of FoodBook is a typical MariaDB database which data is fetched as an aggregate or lazily and provided in an infinite scroll timeline",
+        "demo-link": "https://foodbook.julianjesacher.dev/",
+        "github-link": "https://github.com/JulianJesacher/FoodBook",
         "project-picture-path": "assets/project-image.jpg"
     }
 ]
