--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,5 @@ services:
         image: 'ghcr.io/julianjesacher/portfolio/portfolio:latest'
         ports: 
             - 127.0.0.1:1000:80
+        env_file:
+            - .env
