--- a/projects.json
+++ b/projects.json
@@ -4,20 +4,6 @@
         "description": "FoodBook is a social network for sharing recipes. Its content is protected via JWT authentication and served via an Express.js REST API. The user can create, update and delete recipes using dynamic forms, which are implemented with Angular's Reactive Forms API. At the core of FoodBook is a typical MariaDB database which data is fetched either as an aggregate or lazily and provided in an infinite scroll timeline",
         "demo-link": "https://foodbook.julianjesacher.dev/",
         "github-link": "https://github.com/JulianJesacher/FoodBook",
-        "project-picture-path": "assets/project-image.jpg"
-    },
-    {
-        "title": "FoodBook",
-        "description": "FoodBook is a social network for sharing recipes. Its content is protected via JWT authentication and served via an Express.js REST API. The user can create, update and delete recipes using dynamic forms, which are implemented with Angular's Reactive Forms API. At the core of FoodBook is a typical MariaDB database which data is fetched either as an aggregate or lazily and provided in an infinite scroll timeline",
-        "demo-link": "https://foodbook.julianjesacher.dev/",
-        "github-link": "https://github.com/JulianJesacher/FoodBook",
-        "project-picture-path": "assets/project-image.jpg"
-    },
-    {
-        "title": "FoodBook",
-        "description": "FoodBook is a social network for sharing recipes. Its content is protected via JWT authentication and served via an Express.js REST API. The user can create, update and delete recipes using dynamic forms, which are implemented with Angular's Reactive Forms API. At the core of FoodBook is a typical MariaDB database which data is fetched either as an aggregate or lazily and provided in an infinite scroll timeline",
-        "demo-link": "https://foodbook.julianjesacher.dev/",
-        "github-link": "https://github.com/JulianJesacher/FoodBook",
-        "project-picture-path": "assets/project-image.jpg"
+        "project-picture-path": "assets/project-images/Foodbook.webp"
     }
 ]
