--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,4 @@ services:
         image: 'ghcr.io/julianjesacher/portfolio/portfolio:latest'
         ports: 
             - 127.0.0.1:1000:80
-        env_file:
-            - .env
+        env_file: .env
